# Computational-Geometry-CGAL

./: .gitignore  CMakeLists.txt  README.md  worker.sh
include/: algorithms.hpp  antColony_helper.hpp  polygonizationHelper.hpp  utils.hpp
src/: CMakeLists.txt  antColony.cpp  antColony_helper.cpp  convexHullAlgorithm.cpp  incrementalAlgorithm.cpp  localSearch.cpp  main.cpp  polygonizationHelper.cpp  simulatedAnnealing.cpp  simulatedAnnealing_backup.cpp
